--- a/MyBookShopAPP/src/main/resources/lang/messages_en.properties
+++ b/MyBookShopAPP/src/main/resources/lang/messages_en.properties
@@ -1,5 +1,12 @@
 topbar.main=Main
 topbar.genres=Genres
-topbar.news=News
+topbar.recent=Recent
 topbar.popular=Popular
 topbar.authors=Authors
+topbar.signin=Log in
+topbar.documents=Documents
+topbar.about=About
+topbar.faq=Help
+topbar.contacts=Contacts
+topbar.search=Search
+topbar.langSel=Language selection
