--- a/MyBookShopAPP/src/main/resources/lang/messages_ru.properties
+++ b/MyBookShopAPP/src/main/resources/lang/messages_ru.properties
@@ -1,5 +1,12 @@
 topbar.main=Главная
 topbar.genres=Жанры
-topbar.news=Новинки
+topbar.recent=Новинки
 topbar.popular=Популярное
 topbar.authors=Авторы
+topbar.signin=Авторизоваться
+topbar.documents=Документы
+topbar.about=О компании
+topbar.faq=Помощь
+topbar.contacts=Контакты
+topbar.search=Поиск
+topbar.langSel=Выбор языка
