--- a/MyBookShopAPP/src/main/resources/lang/messages_en.properties
+++ b/MyBookShopAPP/src/main/resources/lang/messages_en.properties
@@ -10,3 +10,9 @@ topbar.faq=Help
 topbar.contacts=Contacts
 topbar.search=Search
 topbar.langSel=Language selection
+topbar.discount=% discount
+topbar.bestseller= Bestseller
+topbar.findBooks=Books found: 
+topbar.showMore=Показать ещё
+topbar.books=Books
+topbar.recommended=Recommended
