--- a/MyBookShopAPP/src/main/resources/lang/messages_ru.properties
+++ b/MyBookShopAPP/src/main/resources/lang/messages_ru.properties
@@ -9,4 +9,10 @@ topbar.about=О компании
 topbar.faq=Помощь
 topbar.contacts=Контакты
 topbar.search=Поиск
-topbar.langSel=Выбор языка
+topbar.langSel=Выбор 
+topbar.discount=% скидка
+topbar.bestseller= Бестселлер
+topbar.findBooks=Найдено книг: 
+topbar.showMore=Показать больше
+topbar.books=Книги
+topbar.recommended=РЕКОМЕНДУЕМОЕ
